# backend

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
postgresql-scripts/: init.sql
src/: app_state.rs  config.rs  main.rs
src/database/: mod.rs
src/models/: account.rs  dex_data.rs  entity.rs  error.rs  mod.rs  project.rs  swap_transaction.rs  tokenterminal_data.rs  user.rs
src/models/dto/: account.rs  dex_data.rs  entity.rs  mod.rs  project.rs  user.rs  utils.rs
src/routes/: account.rs  entity.rs  health.rs  mod.rs  project.rs  swagger.rs  user.rs  utils.rs
src/routes/middlewares/: auth_guard.rs
src/scheduler/: mod.rs
