[package]
name = "axum-jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "^0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
utoipa = { version = "4.2.0" }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = {version = "0.12.7", features = ["json"] }
scraper = "0.20.0"
headless_chrome = "1.0.15"
failure = "0.1.8"
futures = "0.3.30"
